# fall_in_flask

./: FDataBase.py  app.py  blog.db  pyproject.toml  sq_db.sql
static/css/: styles.css
templates/: about.html  add_post.html  base.html  base_v0.html  contact.html  framework-flask-intro.html  index.html  index_v0.html  index_v0_1.html  login.html  page404.html
